[project]
name = "xytb"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Young", email = "afe.young@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

# ───────── semantic-release settings ─────────
[tool.semantic_release]
version_source  = "commit"
commit_parser   = "conventional"              # Switch to new parser as angular is deprecated
tag_format      = "v{version}"
major_on_zero   = true
build_command   = "uvx hatch build"
changelog_file  = "CHANGELOG.md"

[build-system]
requires = [
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
