[project]
name = "xytb"
dynamic = ["version"]
description = "xytb is just (x)iao (y)ang's (t)ool(b)ox; https://github.com/you-n-g/toolbox"
readme = "README.md"
authors = [
    { name = "Young", email = "afe.young@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "libtmux>=0.47.0",
    "litellm>=1.73.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.urls]
Repository = "https://github.com/you-n-g/toolbox"

[project.scripts]
xytb = "xytb.cli:app"

# ───────── semantic-release settings ─────────
[tool.semantic_release]
version_source  = "commit"
commit_parser   = "conventional"              # Switch to new parser as angular is deprecated
tag_format      = "v{version}"
major_on_zero   = true
build_command   = "uvx hatch build"
changelog_file  = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf", "refactor"]

[build-system]
requires = [
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
crawl = [
    "selenium>=4.27.1",
]

[project.optional-dependencies]
# UV use dependency-groups as local dev dependencies not for release. So we have to manually add them to the extras.
crawl = [
    "selenium>=4.27.1",
]

dev = [
  "pytest"
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
